Added EligibilityOverride object with EligibilityOverrideOutcome property
